# deltaforge

./: .dockerignore  .env.example  .gitignore  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.debug  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  apireference.html  architecture.html  cdc.html  checkpoints.html  cliff.toml  configuration.html  dev.sh  development.html  docker-compose.chaos.yml  docker-compose.dev.yml  envelopes.html  index.html  introduction.html  observability.html  pipelines.html  print.html  quickstart.html  roadmap.html  schemaregistry.html  schemasensing.html  searcher-c2a407aa.js  searchindex-01da24c1.js  searchindex-b77b09e0.js  searchindex-e5f3ccc1.js  searchindex-f3825bbc.js  toc-34d768e2.js  toc-3c6d4ff0.js  toc-4ab68d44.js  (+3 more)
.github/: PULL_REQUEST_TEMPLATE.md
book/: 404.html  apireference.html  architecture.html  cdc.html  checkpoints.html  configuration.html  deployment.html  development.html  dlq.html  envelopes.html  failover.html  guarantees.html  index.html  introduction.html  observability.html  outbox.html  performance.html  pipelines.html  print.html  processors.html  quickstart.html  roadmap.html  routing.html  schemaregistry.html  schemasensing.html  searcher-c2a407aa.js  searchindex-1072c8ad.js  storage.html  (+12 more)
crates/chaos/: Cargo.toml  README.md
crates/chaos/src/: backend.rs  docker.rs  harness.rs  main.rs  toxiproxy.rs  ui.html  ui.rs
crates/chaos/src/scenarios/: backlog_drain.rs  binlog_purge.rs  crash_recovery.rs  dlq_poison.rs  exactly_once.rs  failover.rs  mod.rs  network_partition.rs  pg_failover.rs  schema_drift.rs  sink_outage.rs  slot_dropped.rs  soak.rs  sr_outage.rs  tpc_di.rs  tpc_e.rs  tpcc.rs
crates/checkpoints/: Cargo.toml
crates/checkpoints/src/: errors.rs  file_store.rs  lib.rs  mem_store.rs  sqlite_store.rs
crates/common/: Cargo.toml
crates/common/src/: dsn.rs  lib.rs  patterns.rs  pause.rs  retry.rs  routing.rs  time.rs
crates/deltaforge-config/: Cargo.toml
crates/deltaforge-config/src/: filter_cfg.rs  flatten_cfg.rs  lib.rs  outbox_capture.rs  schema_sensing.rs  schema_sensing_cfg.rs  sinks_cfg.rs  snapshot_cfg.rs  storage.rs  turso_cfg.rs  tursodb_cfg.rs
crates/deltaforge-config/tests/: config_tests.rs
crates/deltaforge-core/: Cargo.toml
crates/deltaforge-core/src/: batch_context.rs  errors.rs  journal.rs  lib.rs  routing.rs
crates/deltaforge-core/src/encoding/: avro.rs  avro_schema.rs  avro_types.rs  json.rs  mod.rs
crates/deltaforge-core/src/envelope/: cloudevents.rs  debezium.rs  mod.rs  native.rs
crates/deltaforge-core/tests/: source_handle.rs
crates/deltaforge-o11y/: Cargo.toml
crates/deltaforge-o11y/src/: df_metrics.rs  logging.rs  panic.rs  tracing.rs
crates/deltaforge-processor-js/: Cargo.toml
crates/deltaforge-processor-js/benches/: js_processor_bench.rs
crates/deltaforge-processor-js/src/: lib.rs
crates/deltaforge-processor-js/tests/: js_processor_tests.rs
crates/deltaforge-runner/: Cargo.toml
crates/deltaforge-runner/src/: coordinator.rs  main.rs
crates/deltaforge-sinks/: Cargo.toml
crates/deltaforge-sinks/src/: kafka.rs  lib.rs  redis.rs
crates/deltaforge-sinks/tests/: redis_sink_tests.rs
crates/deltaforge-sources/: Cargo.toml
crates/deltaforge-sources/src/: conn_utils.rs  lib.rs  mysql.rs
crates/deltaforge-sources/src/mysql/: mod.rs  mysql_event.rs  mysql_helpers.rs  mysql_schema.rs  object.rs
crates/deltaforge-sources/tests/: mysql_cdc_e2e.rs
crates/o11y/: Cargo.toml
crates/o11y/src/: df_metrics.rs  lib.rs  logging.rs  panic.rs  tracing.rs
crates/processors/: Cargo.toml
crates/processors/benches/: flatten_processor_bench.rs  js_processor_bench.rs  outbox_processor_bench.rs
crates/processors/src/: filter.rs  flatten.rs  js.rs  lib.rs  outbox.rs  synthetic.rs
crates/processors/tests/: filter_processor_tests.rs  flatten_processor_tests.rs  js_processor_tests.rs
crates/rest-api/: Cargo.toml
crates/rest-api/src/: errors.rs  health.rs  lib.rs  pipelines.rs  schemas.rs  sensing.rs
crates/runner/: Cargo.toml  build.rs
crates/runner/benches/: pipeline_e2e.rs
crates/runner/src/: coordinator.rs  dlq.rs  drift_detector.rs  lib.rs  main.rs  pipeline_manager.rs  schema_api.rs  schema_provider.rs  sensing_api.rs  version.rs
crates/runner/tests/: avro_e2e_tests.rs
crates/schema-registry/: Cargo.toml
crates/schema-registry/src/: lib.rs  source_schema.rs
crates/schema-sensing/: Cargo.toml
crates/schema-sensing/benches/: sensing_bench.rs
crates/schema-sensing/src/: adaptive_hash.rs  errors.rs  field_classifier.rs  fingerprint.rs  high_cardinality.rs  json_schema.rs  lib.rs  schema_state.rs  sensor.rs
crates/schema-sensing/tests/: cache_hit_comparison.rs
crates/sinks/: Cargo.toml
crates/sinks/src/: filter.rs  http.rs  kafka.rs  lib.rs  nats.rs  redis.rs
crates/sinks/tests/: avro_encoding_tests.rs  http_sink_tests.rs  kafka_sink_tests.rs  nats_sink_tests.rs  redis_sink_tests.rs  sink_test_common.rs
crates/sources/: Cargo.toml
crates/sources/src/: conn_utils.rs  lib.rs  postgres.rs  schema_loader.rs
crates/sources/src/failover/: identity.rs  mod.rs  reconciler.rs
crates/sources/src/mysql/: mod.rs  mysql_errors.rs  mysql_event.rs  mysql_health.rs  mysql_helpers.rs  mysql_object.rs  mysql_schema.rs  mysql_schema_loader.rs  mysql_snapshot.rs  mysql_table_schema.rs
crates/sources/src/postgres/: mod.rs  postgres_errors.rs  postgres_event.rs  postgres_health.rs  postgres_helpers.rs  postgres_logical_message.rs  postgres_object.rs  postgres_schema_loader.rs  postgres_snapshot.rs  postgres_table_schema.rs
crates/sources/src/turso/: mod.rs  turso_schema_loader.rs  turso_table_schema.rs
crates/sources/tests/: common.rs  failover_e2e.rs  mysql_cdc_e2e.rs  mysql_snapthot_e2e.rs  postgres_cdc_e2e.rs  postgres_snapshot_e2e.rs  test_common.rs  turso_cdc_e2e.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  memory.rs  postgres.rs  sqlite.rs
crates/storage/src/adapters/: checkpoint.rs  mod.rs  schema_registry.rs
crates/storage/src/tests/: storage_tests.rs
crates/storage/tests/: storage_tests.rs
(+167 files in other folders)
