[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tracing = "0.1"
metrics = "0.24"
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
shellexpand = "3"
rdkafka = { version = "0.38", features = ["tokio"] }
redis = { version = "0.32", features = ["tokio-comp"] }
deno_core = "0.357"
serde_v8 = "0.266"
axum = { version = "0.8", features = ["macros", "json"] }
parking_lot = "0.12"
etl = { git = "https://github.com/supabase/etl", package = "etl" }
futures = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
base64 = "0.22"
url = "2.5"
thiserror = "1"
bytes = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[workspace.lints.rust]
unsafe_code = "deny"
unused_crate_dependencies = "allow"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
collapsible_if = "allow"

[profile.bench]
debug = true
strip = false