[package]
name = "checkpoints"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

[features]
default = []
cp-sqlite = ["rusqlite"]

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
serde_json.workspace = true
async-trait.workspace = true
chrono.workspace = true
rusqlite = { version = "0.38", features = ["bundled"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
