[package]
name = "common"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "Shared utilities for DeltaForge sources and sinks"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true

anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
tracing.workspace = true
rand = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true