[package]
name = "deltaforge-config"
version = "0.1.0"
edition.workspace = true

[dependencies]
walkdir ={ version = "2.5"}
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
shellexpand.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
serial_test = "3"
