[package]
name = "deltaforge-config"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

[features]
default = []
turso = []

[dependencies]
walkdir ={ version = "2.5"}
thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true
shellexpand.workspace = true
tracing.workspace = true
deltaforge-core = { path = "../deltaforge-core"}

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
serial_test = "3"

[lints]
workspace = true