[package]
name = "deltaforge-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
deltaforge-checkpoints ={ path = "../deltaforge-checkpoints"}
tokio-util.workspace = true
thiserror.workspace = true