[package]
name = "deltaforge-processor-js"
version = "0.1.0"
edition.workspace = true

[dependencies]
deno_core.workspace = true
serde_v8.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tracing.workspace = true
deltaforge-core ={ path = "../deltaforge-core"}
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
serial_test = "3"