[package]
name = "deltaforge-runner"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
clap = { version = "4", features = ["derive"] }
deltaforge-core = { path = "../deltaforge-core" }
deltaforge-config = { path = "../deltaforge-config" }
deltaforge-registry = { path = "../deltaforge-registry" }
deltaforge-sources = { path = "../deltaforge-sources" }
deltaforge-sinks = { path = "../deltaforge-sinks" }
deltaforge-processor-js = { path = "../deltaforge-processor-js" }
deltaforge-api = { path = "../deltaforge-api" }
deltaforge-metrics ={ path = "../deltaforge-metrics"}