[package]
name = "deltaforge-sinks"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rdkafka = { workspace = true }
redis = { workspace = true }
deltaforge-core = { path = "../deltaforge-core" }