[package]
name = "deltaforge-sources"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait.workspace = true
tokio.workspace = true
deltaforge-core = { path = "../deltaforge-core"}
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
serde_json.workspace = true