[package]
name = "o11y"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-log = "0.2"
metrics.workspace = true
metrics-exporter-prometheus = "0.17"
axum.workspace = true
tokio.workspace = true
once_cell = "1"
