[package]
name = "processors"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
metrics.workspace = true
deno_core.workspace = true
serde_v8.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tracing.workspace = true
deltaforge-core = { path = "../deltaforge-core" }
deltaforge-config = { path = "../deltaforge-config" }
common = { path = "../common" }
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
serial_test = "3"
criterion = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
once_cell = "1"

[[bench]]
name = "js_processor_bench"
harness = false

[lints]
workspace = true
