[package]
name = "rest-api"
version = "0.1.1"
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
deltaforge-config = { path = "../deltaforge-config" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = "0.5"

[lints]
workspace = true