[package]
name = "runner"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

[features]
default = []
turso = []

[dependencies]
metrics.workspace = true
tokio.workspace = true
tokio-util.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
tracing.workspace = true
axum.workspace = true
clap = { version = "4", features = ["derive"] }
deltaforge-core = { path = "../deltaforge-core" }
schema-sensing = { path = "../schema-sensing" }
deltaforge-config = { path = "../deltaforge-config" }
o11y = { path = "../o11y" }
schema-registry = { path = "../schema-registry" }
sources = { path = "../sources" }
sinks = { path = "../sinks" }
processors = { path = "../processors" }
rest-api = { path = "../rest-api" }
checkpoints = { path = "../checkpoints" }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "pipeline_e2e"
harness = false

[lints]
workspace = true