[package]
name = "sinks"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
futures.workspace = true
anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rdkafka = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
deltaforge-core = { path = "../deltaforge-core" }
deltaforge-config = { path = "../deltaforge-config" }
common = { path = "../common" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
ctor = "0.6"
testcontainers = "0.25"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }

[lints]
workspace = true
