[package]
name = "sources"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
metrics.workspace = true
async-trait.workspace = true
futures.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tokio-util.workspace = true
deltaforge-config = { path = "../deltaforge-config" }
deltaforge-core = { path = "../deltaforge-core" }
checkpoints = { path = "../checkpoints" }
schema-registry = { path = "../schema-registry" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
mysql-binlog-connector-rust = "0.3"
crc32fast = "1.5"
mysql_async = "0.36"
base64.workspace = true
url.workspace = true
mysql_common = { version = "0.35", features = ["binlog"] }
rand = "0.9.2"
libsql = "0.6"
hex = "0.4"
sha2 = "0.10"
bytes = "1"
pgwire-replication = "0.1"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }

[dev-dependencies]
testcontainers = "0.25"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
tempfile = "3"
