[package]
name = "storage"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "Unified durable storage abstraction for DeltaForge runtime state"

[features]
default = ["sqlite"]
sqlite = ["rusqlite"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
chrono.workspace = true

# SQLite — same version as checkpoints crate to avoid libsqlite3-sys conflict
rusqlite = { version = "0.38", features = ["bundled"], optional = true }

# Adapters
checkpoints = { path = "../checkpoints" }
schema-registry = { path = "../schema-registry" }
deltaforge-core = { path = "../deltaforge-core" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true